--- a/frontend/index.html
+++ b/frontend/index.html
@@ -200,10 +200,11 @@
         <div class="container" data-aos="fade-up">
             <div class="hero-content">
                 <h1>Excellence in Education</h1>
-                <p>Empowering Minds, Shaping Futures at SVES College Harugeri. A legacy of academic excellence since
+                <p>Empowering Minds, Shaping Futures at SVES B R Darur First Grade, College Harugeri. A legacy of
+                    academic excellence since
                     1983.</p>
                 <div class="hero-btns">
-                    <a href="admissions.html" class="btn btn-secondary">Apply Now</a>
+                    <a href="admissions.html" class="btn btn-secondary">Join Now</a>
                     <a href="admin/login.html" class="btn btn-outline" style="color: white; border-color: white;">Admin
                         Login</a>
                 </div>
