--- a/frontend/index.html
+++ b/frontend/index.html
@@ -299,7 +299,8 @@
                 <div class="why-image" style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
                     <div
                         style="position: relative; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);">
-                        <img src="assets/images/campus.jpg" alt="College Campus" style="width: 100%; display: block;">
+                        <video src="../frontend/assets/images/SVES About.mp4" alt="video" autoplay muted loop controls
+                            style="width: 100%;height: 100%;"></video>
                         <div
                             style="position: absolute; bottom: 30px; left: 30px; background: var(--secondary); padding: 20px; border-radius: var(--radius-md); box-shadow: var(--shadow-md);">
                             <h2 style="color: var(--primary); font-size: 2.5rem; line-height: 1;">40+</h2>
